[gd_scene load_steps=2 format=3 uid="uid://cuwiwfldd3cbg"]

[ext_resource type="Script" path="res://Scripts/TowerDefense/tower_ui.gd" id="1_gksxe"]

[node name="TowerUI" type="Control" node_paths=PackedStringArray("label")]
layout_mode = 3
anchors_preset = 0
offset_right = 55.0
offset_bottom = 19.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_gksxe")
label = NodePath("Panel/Label")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 0
text = "FIRST"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="gui_input" from="Panel/Label" to="." method="_on_label_gui_input"]
[connection signal="mouse_entered" from="Panel/Label" to="." method="_on_label_mouse_entered"]
[connection signal="mouse_exited" from="Panel/Label" to="." method="_on_label_mouse_exited"]
